fixed movie images not showing in firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,22 @@ body {
   background-color: var(--bg-color);
 }
 
+body.portal-open {
+  position: relative;
+  overflow: hidden;
+}
+
+body.portal-open::after {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: theme("colors.gray.800");
+  opacity: 0.5;
+  width: 100%;
+  height: 100%;
+}
+
 :root {
   --bg-color: #f7f7f8;
   --light-bg-color: #fdfdfd;
